--- a/index.html
+++ b/index.html
@@ -3,8 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Pacifico|Shadows+Into+Light&display=swap" rel="stylesheet">   
+     <link rel="stylesheet" href="./css/style.css">
 </head>
+<body>
+   <div class="header">
+    <h1 id="name"> Richard Nulanz</h1>
+        <section class="link">
+             <a href="contact.html">Contact</a>
+             <a href="portfolio">Portfolio</a>
+        </section>   
+   </div> 
+        <section id="back-me" class="clearfix">
+           <div class="text">
+              <h2>About Me</h2>
+              <img src="https://media.licdn.com/dms/image/C4E03AQHyh7lEmB4mSw/profile-displayphoto-shrink_100_100/0?e=1573689600&v=beta&t=Njy0kxBdYvPJZRuLcrGlp4hbJITP8rI7YfTqTRRgjTY">
+              <p id="me"> Experienced Project Manager seeks to utilize knowledge of budgeting, problem solving, communication and people skills to advance career. 
+                With a Master of Science Degree concentrating in Homeland Security, my goal is to leverage both my project management experience and my educational 
+                training in terrorism and justice, infrastructure, national security, data analysis and strategic planning. I graduate from the University of Nevada Las 
+             Vegas with an bachelors in Criminal Justice. After graduating I attened Chaminade University, there I obtained my masters degree in Criminal Justice with a 
+             concentration in Homeland Security. In my free time I love playing all kinds of sports. Most recently I started playing slow pitch softball, just so I will stop 
+            getting injured. Now that is not the case, as I am recovering from knee surgery becasue of softball. 
+             </p>
+                <div class="list">
+                     <ul>
+                        <li>Law</li>
+                        <li>Homeland Security</li>
+                        <li>Technology</li>
+                   </ul>
+                </div>
+           </div>
+        </section>    
 
+
+</body>
 
 
 </html>
