--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,11 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
  <body>
-
+        <section class="link">
+                <a href="index.html">Home</a>
+                 <a href="contact.html">Contact</a>
+                 <a href="portfolio.html">Portfolio</a>
+            </section>
 <div class="contact">
   <form>
     <label>First Name</label>
@@ -16,7 +20,7 @@
     <input id="text">
 
     <label>Message</label>
-     <input id="type">
+    <input id="type">
   
     <input id="submit" value="Submit">
   </form>
