--- a/index.html
+++ b/index.html
@@ -8,35 +8,39 @@
 </head>
 <body>
    <div class="header">
-    <h1 id="name"> Richard Nulanz</h1>
-        <section class="link">
-             <a href="contact.html">Contact</a>
-             <a href="portfolio">Portfolio</a>
-        </section>   
+        <h1 id="name"> Richard Nulanz</h1>
+            <section class="link">
+                <a href="index.html">Home</a>
+                <a href="contact.html">Contact</a>
+                <a href="portfolio.html">Portfolio</a>
+            </section>   
    </div> 
+       
         <section id="back-me" class="clearfix">
-           <div class="text">
-              <h2>About Me</h2>
-              <a href="www.linkedin.com/in/richard-nulanz-5a6045139">
-              <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/60040183_2199641867015508_5363371386184138752_n.jpg?_nc_cat=111&_nc_oc=AQmdA2XWZOiYo5LdoxgMStpQUG83wS0Dn_UhiBv8sKh7I_X3lRk8vbdlEYapcfIXGnWZMrmsuvNRx89XFhX86XVc&_nc_ht=scontent-iad3-1.xx&oh=542676f35089309f37ec30727fa535c4&oe=5E3DEC46">
-              </a>
-              <p id="me"> Experienced Project Manager seeks to utilize knowledge of budgeting, problem solving, communication and people skills to advance career. 
-                With a Master of Science Degree concentrating in Homeland Security, my goal is to leverage both my project management experience and my educational 
-                training in terrorism and justice, infrastructure, national security, data analysis and strategic planning. I graduate from the University of Nevada Las 
-             Vegas with an bachelors in Criminal Justice. After graduating I attened Chaminade University, there I obtained my masters degree in Criminal Justice with a 
-             concentration in Homeland Security. <br>In my free time I love playing all kinds of sports. Most recently I started playing slow pitch softball, just so I would stop 
-            getting injured. Now that is not the case, as I am recovering from knee surgery becasue of softball. 
-             </p>
+            <div class="text">
+                <h2>About Me</h2>
+                    <a href="www.linkedin.com/in/richard-nulanz-5a6045139">
+                    <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/60040183_2199641867015508_5363371386184138752_n.jpg?_nc_cat=111&_nc_oc=AQmdA2XWZOiYo5LdoxgMStpQUG83wS0Dn_UhiBv8sKh7I_X3lRk8vbdlEYapcfIXGnWZMrmsuvNRx89XFhX86XVc&_nc_ht=scontent-iad3-1.xx&oh=542676f35089309f37ec30727fa535c4&oe=5E3DEC46">
+                    </a>
+                        <p id="me"> Experienced Project Manager seeks to utilize knowledge of budgeting, problem solving, communication and people skills to advance career. 
+                            With a Master of Science Degree concentrating in Homeland Security, my goal is to leverage both my project management experience and my educational 
+                             training in terrorism and justice, infrastructure, national security, data analysis and strategic planning. I graduate from the University of Nevada Las 
+                            Vegas with an bachelors in Criminal Justice. After graduating I attened Chaminade University, there I obtained my masters degree in Criminal Justice with a 
+                            concentration in Homeland Security.
+                        </p>
+                        <p id="sport">In my free time I love playing all kinds of sports. Most recently I started playing slow pitch softball, just so I would stop 
+                        getting injured. Now that is not the case, as I am recovering from knee surgery becasue of softball. 
+                        </p>
                      
-                  <img id="softball" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/70442633_2283154311997596_867286014551392256_n.jpg?_nc_cat=106&_nc_oc=AQlEEdLXIF4bmWTgZp3uxwTBLcZq4tOkwRLfotvedsElmoxtGKTeExddqzteGHbPMqqIB_vY6hFfpzN7inRO2s10&_nc_ht=scontent-iad3-1.xx&oh=59b8b2b19a926cdb34359b8c81c8ea38&oe=5E3CA823">
-                  <div class="list">
-                        <ul>
-                           <li>Law</li>
-                           <li>Homeland Security</li>
-                           <li>Technology</li>
-                      </ul>
-                </div>  
-           </div>       
+                         <img id="softball" src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/70442633_2283154311997596_867286014551392256_n.jpg?_nc_cat=106&_nc_oc=AQlEEdLXIF4bmWTgZp3uxwTBLcZq4tOkwRLfotvedsElmoxtGKTeExddqzteGHbPMqqIB_vY6hFfpzN7inRO2s10&_nc_ht=scontent-iad3-1.xx&oh=59b8b2b19a926cdb34359b8c81c8ea38&oe=5E3CA823">
+                           <div class="list">
+                            <ul>
+                             <li>Soccer</li>
+                             <li>Softball</li>
+                             <li>OTF</li>
+                            </ul>
+                           </div>  
+             </div>       
          </section>    
 
 
