--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 <div class="contact">
   <form>
     <label>First Name</label>
-    <input id="text">
+    <input id="text" name="first-name">
 
     <label>Last Name</label>
     <input id="text">
