--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section id="back-me" class="clearfix">
             <div class="text">
                 <h2>About Me</h2>
-                    <a href="www.linkedin.com/in/richard-nulanz-5a6045139">
+                    <a href="www.linkedin.com/in/richard-nulanz-5a6045139" target="blank">
                     <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/60040183_2199641867015508_5363371386184138752_n.jpg?_nc_cat=111&_nc_oc=AQmdA2XWZOiYo5LdoxgMStpQUG83wS0Dn_UhiBv8sKh7I_X3lRk8vbdlEYapcfIXGnWZMrmsuvNRx89XFhX86XVc&_nc_ht=scontent-iad3-1.xx&oh=542676f35089309f37ec30727fa535c4&oe=5E3DEC46">
                     </a>
                         <p id="me"> Experienced Project Manager seeks to utilize knowledge of budgeting, problem solving, communication and people skills to advance career. 
