--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <p id="me"> Experienced Project Manager seeks to utilize knowledge of budgeting, problem solving, communication and people skills to advance career. 
                             With a Master of Science Degree concentrating in Homeland Security, my goal is to leverage both my project management experience and my educational 
                              training in terrorism and justice, infrastructure, national security, data analysis and strategic planning. I graduate from the University of Nevada Las 
-                            Vegas with an bachelors in Criminal Justice. After graduating I attened Chaminade University, there I obtained my masters degree in Criminal Justice with a 
+                            Vegas with n bachelors in Criminal Justice. After graduating from UNLV I attended Chaminade University, there I obtained my masters degree in Criminal Justice with a 
                             concentration in Homeland Security.
                         </p>
                         <p id="sport">In my free time I love playing all kinds of sports. Most recently I started playing slow pitch softball, just so I would stop 
