--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
      <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div class="wrapper">
         <section class="link">
                 <a href="index.html">Home</a>
                 <a href="contact.html">Contact</a>
                 <a href="portfolio.html">Portfolio</a>
             </section>
-   <div class="header">
+      <div class="header">
         <h1 id="name"> Richard Nulanz</h1>
-   </div> 
-       
+      </div> 
+    </div>  
+    <div class="wrapper2">
         <section id="back-me" class="clearfix">
             <div class="text">
                 <h2>About Me</h2>
@@ -42,7 +44,7 @@
                            </div>  
              </div>       
          </section>    
-
+    </div>
 
 </body>
 
