--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                             Vegas with n bachelors in Criminal Justice. After graduating from UNLV I attended Chaminade University, there I obtained my masters degree in Criminal Justice with a 
                             concentration in Homeland Security.
                         </p>
+                        <img class="home" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/Seal_of_the_United_States_Department_of_Homeland_Security.svg/1200px-Seal_of_the_United_States_Department_of_Homeland_Security.svg.png">
                         <p id="sport">In my free time I love playing all kinds of sports. Most recently I started playing slow pitch softball, just so I would stop 
                         getting injured. Now that is not the case, as I am recovering from knee surgery becasue of softball. 
                         </p>
