--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="text">
                 <h2>About Me</h2>
                     <a href="www.linkedin.com/in/richard-nulanz-5a6045139" target="blank">
-                    <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t1.0-9/60040183_2199641867015508_5363371386184138752_n.jpg?_nc_cat=111&_nc_oc=AQmdA2XWZOiYo5LdoxgMStpQUG83wS0Dn_UhiBv8sKh7I_X3lRk8vbdlEYapcfIXGnWZMrmsuvNRx89XFhX86XVc&_nc_ht=scontent-iad3-1.xx&oh=542676f35089309f37ec30727fa535c4&oe=5E3DEC46">
+                    <img src="images/1Y1A7903.jpg">
                     </a>
                         <p id="me"> Experienced Project Manager seeks to utilize knowledge of budgeting, problem solving, communication and people skills to advance career. 
                             With a Master of Science Degree concentrating in Homeland Security, my goal is to leverage both my project management experience and my educational 
@@ -43,6 +43,9 @@
                              <li>OTF</li>
                             </ul>
                            </div>  
+                        <footer>
+                            <section class="footer2"> Copy Right 2019  </section>
+                        </footer>   
              </div>       
          </section>    
     </div>
