--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,9 @@
                      <a href="portfolio.html">Portfolio</a>
             </section>   
 
-        <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t31.0-8/240634_2032342016091_3262132_o.jpg?_nc_cat=110&_nc_oc=AQnm8r6eLtBApFTPY6J11iily5Mre1swfr2WA6-sqsDRFEsvIAymwJxdOT_nwmPiAUGtAlUnPMbSQx0mQYPcs7fh&_nc_ht=scontent-iad3-1.xx&oh=25924ddfa304b1d1ed8787eb9f431dbe&oe=5DF30B63">
+        <img id="UNLV" src="images/IMG_0057.jpg">
+        <img id="family" src="images/IMG_0078.jpg" alt="">
+        <img id="Hawaii"src="images/IMG_0210.jpg" alt="">
     </body>
 
 </html>
