--- a/portfolio.html
+++ b/portfolio.html
@@ -10,11 +10,13 @@
                     <a href="index.html">Home</a>
                      <a href="contact.html">Contact</a>
                      <a href="portfolio.html">Portfolio</a>
-            </section>   
+            </section>  
 
-        <img id="UNLV" src="images/IMG_0057.jpg">
-        <img id="family" src="images/IMG_0078.jpg" alt="">
-        <img id="Hawaii"src="images/IMG_0210.jpg" alt="">
+        
+        <img id="UNLV"  class="pro" src="images/IMG_0057.jpg">   
+        <img id="family" class="pro" src="images/IMG_0078.jpg">
+        <img id="Hawaii" class="pro" src="images/IMG_0210.jpg">
+
     </body>
 
-</html>
+</html>√
